@@ -19,6 +19,8 @@ Log:
 	
 	Beware: Mac OS-X support has been moved to the new architecture but 
 	has not been compiled !!!
+
+	Bug in serial link support (mode asm: no timeout on ser_get).
 	
 - 01/03/2004, version 3.7.9: tijl
 	BSD usb fix in libticables
